using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum SkillAttributeType
{
    None = 0,
    Ice,
    Fire,
}
